[gd_scene load_steps=7 format=3 uid="uid://bx8u534hy0ugq"]

[ext_resource type="Script" uid="uid://do4fsubvhcn1s" path="res://ui/comodines/Carta.gd" id="1_4r65w"]
[ext_resource type="Texture2D" uid="uid://3juc8x146yvv" path="res://assets/ui/comodines/base-carta.png" id="1_674nk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2k0vf"]
size = Vector2(141, 167)

[sub_resource type="LabelSettings" id="LabelSettings_f3qeb"]
font_size = 55
font_color = Color(0, 0, 0, 1)

[sub_resource type="FontFile" id="FontFile_87h7q"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0
cache/0/90/0/ascent = 0.0
cache/0/90/0/descent = 0.0
cache/0/90/0/underline_position = 0.0
cache/0/90/0/underline_thickness = 0.0
cache/0/90/0/scale = 1.0
cache/0/155/0/ascent = 0.0
cache/0/155/0/descent = 0.0
cache/0/155/0/underline_position = 0.0
cache/0/155/0/underline_thickness = 0.0
cache/0/155/0/scale = 1.0
cache/0/280/0/ascent = 0.0
cache/0/280/0/descent = 0.0
cache/0/280/0/underline_position = 0.0
cache/0/280/0/underline_thickness = 0.0
cache/0/280/0/scale = 1.0
cache/0/325/0/ascent = 0.0
cache/0/325/0/descent = 0.0
cache/0/325/0/underline_position = 0.0
cache/0/325/0/underline_thickness = 0.0
cache/0/325/0/scale = 1.0
cache/0/415/0/ascent = 0.0
cache/0/415/0/descent = 0.0
cache/0/415/0/underline_position = 0.0
cache/0/415/0/underline_thickness = 0.0
cache/0/415/0/scale = 1.0
cache/0/505/0/ascent = 0.0
cache/0/505/0/descent = 0.0
cache/0/505/0/underline_position = 0.0
cache/0/505/0/underline_thickness = 0.0
cache/0/505/0/scale = 1.0
cache/0/575/0/ascent = 0.0
cache/0/575/0/descent = 0.0
cache/0/575/0/underline_position = 0.0
cache/0/575/0/underline_thickness = 0.0
cache/0/575/0/scale = 1.0
cache/0/630/0/ascent = 0.0
cache/0/630/0/descent = 0.0
cache/0/630/0/underline_position = 0.0
cache/0/630/0/underline_thickness = 0.0
cache/0/630/0/scale = 1.0
cache/0/665/0/ascent = 0.0
cache/0/665/0/descent = 0.0
cache/0/665/0/underline_position = 0.0
cache/0/665/0/underline_thickness = 0.0
cache/0/665/0/scale = 1.0
cache/0/680/0/ascent = 0.0
cache/0/680/0/descent = 0.0
cache/0/680/0/underline_position = 0.0
cache/0/680/0/underline_thickness = 0.0
cache/0/680/0/scale = 1.0
cache/0/695/0/ascent = 0.0
cache/0/695/0/descent = 0.0
cache/0/695/0/underline_position = 0.0
cache/0/695/0/underline_thickness = 0.0
cache/0/695/0/scale = 1.0
cache/0/700/0/ascent = 0.0
cache/0/700/0/descent = 0.0
cache/0/700/0/underline_position = 0.0
cache/0/700/0/underline_thickness = 0.0
cache/0/700/0/scale = 1.0
cache/0/715/0/ascent = 0.0
cache/0/715/0/descent = 0.0
cache/0/715/0/underline_position = 0.0
cache/0/715/0/underline_thickness = 0.0
cache/0/715/0/scale = 1.0
cache/0/745/0/ascent = 0.0
cache/0/745/0/descent = 0.0
cache/0/745/0/underline_position = 0.0
cache/0/745/0/underline_thickness = 0.0
cache/0/745/0/scale = 1.0
cache/0/820/0/ascent = 0.0
cache/0/820/0/descent = 0.0
cache/0/820/0/underline_position = 0.0
cache/0/820/0/underline_thickness = 0.0
cache/0/820/0/scale = 1.0
cache/0/855/0/ascent = 0.0
cache/0/855/0/descent = 0.0
cache/0/855/0/underline_position = 0.0
cache/0/855/0/underline_thickness = 0.0
cache/0/855/0/scale = 1.0
cache/0/860/0/ascent = 0.0
cache/0/860/0/descent = 0.0
cache/0/860/0/underline_position = 0.0
cache/0/860/0/underline_thickness = 0.0
cache/0/860/0/scale = 1.0
cache/0/850/0/ascent = 0.0
cache/0/850/0/descent = 0.0
cache/0/850/0/underline_position = 0.0
cache/0/850/0/underline_thickness = 0.0
cache/0/850/0/scale = 1.0
cache/0/815/0/ascent = 0.0
cache/0/815/0/descent = 0.0
cache/0/815/0/underline_position = 0.0
cache/0/815/0/underline_thickness = 0.0
cache/0/815/0/scale = 1.0
cache/0/705/0/ascent = 0.0
cache/0/705/0/descent = 0.0
cache/0/705/0/underline_position = 0.0
cache/0/705/0/underline_thickness = 0.0
cache/0/705/0/scale = 1.0
cache/0/675/0/ascent = 0.0
cache/0/675/0/descent = 0.0
cache/0/675/0/underline_position = 0.0
cache/0/675/0/underline_thickness = 0.0
cache/0/675/0/scale = 1.0
cache/0/655/0/ascent = 0.0
cache/0/655/0/descent = 0.0
cache/0/655/0/underline_position = 0.0
cache/0/655/0/underline_thickness = 0.0
cache/0/655/0/scale = 1.0
cache/0/645/0/ascent = 0.0
cache/0/645/0/descent = 0.0
cache/0/645/0/underline_position = 0.0
cache/0/645/0/underline_thickness = 0.0
cache/0/645/0/scale = 1.0
cache/0/640/0/ascent = 0.0
cache/0/640/0/descent = 0.0
cache/0/640/0/underline_position = 0.0
cache/0/640/0/underline_thickness = 0.0
cache/0/640/0/scale = 1.0
cache/0/620/0/ascent = 0.0
cache/0/620/0/descent = 0.0
cache/0/620/0/underline_position = 0.0
cache/0/620/0/underline_thickness = 0.0
cache/0/620/0/scale = 1.0
cache/0/615/0/ascent = 0.0
cache/0/615/0/descent = 0.0
cache/0/615/0/underline_position = 0.0
cache/0/615/0/underline_thickness = 0.0
cache/0/615/0/scale = 1.0
cache/0/605/0/ascent = 0.0
cache/0/605/0/descent = 0.0
cache/0/605/0/underline_position = 0.0
cache/0/605/0/underline_thickness = 0.0
cache/0/605/0/scale = 1.0
cache/0/590/0/ascent = 0.0
cache/0/590/0/descent = 0.0
cache/0/590/0/underline_position = 0.0
cache/0/590/0/underline_thickness = 0.0
cache/0/590/0/scale = 1.0
cache/0/550/0/ascent = 0.0
cache/0/550/0/descent = 0.0
cache/0/550/0/underline_position = 0.0
cache/0/550/0/underline_thickness = 0.0
cache/0/550/0/scale = 1.0
cache/0/525/0/ascent = 0.0
cache/0/525/0/descent = 0.0
cache/0/525/0/underline_position = 0.0
cache/0/525/0/underline_thickness = 0.0
cache/0/525/0/scale = 1.0
cache/0/510/0/ascent = 0.0
cache/0/510/0/descent = 0.0
cache/0/510/0/underline_position = 0.0
cache/0/510/0/underline_thickness = 0.0
cache/0/510/0/scale = 1.0
cache/0/475/0/ascent = 0.0
cache/0/475/0/descent = 0.0
cache/0/475/0/underline_position = 0.0
cache/0/475/0/underline_thickness = 0.0
cache/0/475/0/scale = 1.0
cache/0/445/0/ascent = 0.0
cache/0/445/0/descent = 0.0
cache/0/445/0/underline_position = 0.0
cache/0/445/0/underline_thickness = 0.0
cache/0/445/0/scale = 1.0
cache/0/390/0/ascent = 0.0
cache/0/390/0/descent = 0.0
cache/0/390/0/underline_position = 0.0
cache/0/390/0/underline_thickness = 0.0
cache/0/390/0/scale = 1.0
cache/0/360/0/ascent = 0.0
cache/0/360/0/descent = 0.0
cache/0/360/0/underline_position = 0.0
cache/0/360/0/underline_thickness = 0.0
cache/0/360/0/scale = 1.0
cache/0/295/0/ascent = 0.0
cache/0/295/0/descent = 0.0
cache/0/295/0/underline_position = 0.0
cache/0/295/0/underline_thickness = 0.0
cache/0/295/0/scale = 1.0
cache/0/265/0/ascent = 0.0
cache/0/265/0/descent = 0.0
cache/0/265/0/underline_position = 0.0
cache/0/265/0/underline_thickness = 0.0
cache/0/265/0/scale = 1.0
cache/0/240/0/ascent = 0.0
cache/0/240/0/descent = 0.0
cache/0/240/0/underline_position = 0.0
cache/0/240/0/underline_thickness = 0.0
cache/0/240/0/scale = 1.0
cache/0/210/0/ascent = 0.0
cache/0/210/0/descent = 0.0
cache/0/210/0/underline_position = 0.0
cache/0/210/0/underline_thickness = 0.0
cache/0/210/0/scale = 1.0
cache/0/190/0/ascent = 0.0
cache/0/190/0/descent = 0.0
cache/0/190/0/underline_position = 0.0
cache/0/190/0/underline_thickness = 0.0
cache/0/190/0/scale = 1.0
cache/0/170/0/ascent = 0.0
cache/0/170/0/descent = 0.0
cache/0/170/0/underline_position = 0.0
cache/0/170/0/underline_thickness = 0.0
cache/0/170/0/scale = 1.0
cache/0/160/0/ascent = 0.0
cache/0/160/0/descent = 0.0
cache/0/160/0/underline_position = 0.0
cache/0/160/0/underline_thickness = 0.0
cache/0/160/0/scale = 1.0
cache/0/150/0/ascent = 0.0
cache/0/150/0/descent = 0.0
cache/0/150/0/underline_position = 0.0
cache/0/150/0/underline_thickness = 0.0
cache/0/150/0/scale = 1.0
cache/0/145/0/ascent = 0.0
cache/0/145/0/descent = 0.0
cache/0/145/0/underline_position = 0.0
cache/0/145/0/underline_thickness = 0.0
cache/0/145/0/scale = 1.0
cache/0/140/0/ascent = 0.0
cache/0/140/0/descent = 0.0
cache/0/140/0/underline_position = 0.0
cache/0/140/0/underline_thickness = 0.0
cache/0/140/0/scale = 1.0
cache/0/135/0/ascent = 0.0
cache/0/135/0/descent = 0.0
cache/0/135/0/underline_position = 0.0
cache/0/135/0/underline_thickness = 0.0
cache/0/135/0/scale = 1.0
cache/0/130/0/ascent = 0.0
cache/0/130/0/descent = 0.0
cache/0/130/0/underline_position = 0.0
cache/0/130/0/underline_thickness = 0.0
cache/0/130/0/scale = 1.0
cache/0/125/0/ascent = 0.0
cache/0/125/0/descent = 0.0
cache/0/125/0/underline_position = 0.0
cache/0/125/0/underline_thickness = 0.0
cache/0/125/0/scale = 1.0
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/85/0/ascent = 0.0
cache/0/85/0/descent = 0.0
cache/0/85/0/underline_position = 0.0
cache/0/85/0/underline_thickness = 0.0
cache/0/85/0/scale = 1.0
cache/0/65/0/ascent = 0.0
cache/0/65/0/descent = 0.0
cache/0/65/0/underline_position = 0.0
cache/0/65/0/underline_thickness = 0.0
cache/0/65/0/scale = 1.0
cache/0/55/0/ascent = 0.0
cache/0/55/0/descent = 0.0
cache/0/55/0/underline_position = 0.0
cache/0/55/0/underline_thickness = 0.0
cache/0/55/0/scale = 1.0
cache/0/45/0/ascent = 0.0
cache/0/45/0/descent = 0.0
cache/0/45/0/underline_position = 0.0
cache/0/45/0/underline_thickness = 0.0
cache/0/45/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/15/0/ascent = 0.0
cache/0/15/0/descent = 0.0
cache/0/15/0/underline_position = 0.0
cache/0/15/0/underline_thickness = 0.0
cache/0/15/0/scale = 1.0
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/70/0/ascent = 0.0
cache/0/70/0/descent = 0.0
cache/0/70/0/underline_position = 0.0
cache/0/70/0/underline_thickness = 0.0
cache/0/70/0/scale = 1.0
cache/0/75/0/ascent = 0.0
cache/0/75/0/descent = 0.0
cache/0/75/0/underline_position = 0.0
cache/0/75/0/underline_thickness = 0.0
cache/0/75/0/scale = 1.0
cache/0/80/0/ascent = 0.0
cache/0/80/0/descent = 0.0
cache/0/80/0/underline_position = 0.0
cache/0/80/0/underline_thickness = 0.0
cache/0/80/0/scale = 1.0
cache/0/95/0/ascent = 0.0
cache/0/95/0/descent = 0.0
cache/0/95/0/underline_position = 0.0
cache/0/95/0/underline_thickness = 0.0
cache/0/95/0/scale = 1.0
cache/0/105/0/ascent = 0.0
cache/0/105/0/descent = 0.0
cache/0/105/0/underline_position = 0.0
cache/0/105/0/underline_thickness = 0.0
cache/0/105/0/scale = 1.0
cache/0/110/0/ascent = 0.0
cache/0/110/0/descent = 0.0
cache/0/110/0/underline_position = 0.0
cache/0/110/0/underline_thickness = 0.0
cache/0/110/0/scale = 1.0
cache/0/115/0/ascent = 0.0
cache/0/115/0/descent = 0.0
cache/0/115/0/underline_position = 0.0
cache/0/115/0/underline_thickness = 0.0
cache/0/115/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_s7puy"]
font_size = 90
font_color = Color(0, 0, 0, 1)

[node name="Carta" type="Node2D"]
script = ExtResource("1_4r65w")

[node name="SpriteBaseCarta" type="Sprite2D" parent="."]
position = Vector2(140.5, 224.125)
scale = Vector2(2.81, 2.5575)
texture = ExtResource("1_674nk")

[node name="AreaClick" type="Area2D" parent="SpriteBaseCarta"]
position = Vector2(-50, -87.6344)
scale = Vector2(0.355872, 0.391007)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteBaseCarta/AreaClick"]
position = Vector2(130, 214)
shape = SubResource("RectangleShape2D_2k0vf")

[node name="InfoCarta" type="Node2D" parent="."]
position = Vector2(131.26, 196.57)
scale = Vector2(0.17, 0.17)

[node name="DescripcionCarta" type="Label" parent="InfoCarta"]
offset_left = -360.353
offset_top = 143.706
offset_right = 342.647
offset_bottom = 423.706
text = "descripcion"
label_settings = SubResource("LabelSettings_f3qeb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ImagenCarta2" type="Node2D" parent="InfoCarta"]

[node name="SpriteImagenCarta" type="Sprite2D" parent="InfoCarta/ImagenCarta2"]
position = Vector2(-21, -15)
scale = Vector2(0.432129, 0.369629)

[node name="IconoCarta" type="Node2D" parent="InfoCarta"]

[node name="SpriteIconoCarta" type="Sprite2D" parent="InfoCarta/IconoCarta"]
position = Vector2(-21, -429)
scale = Vector2(4.38, 3.89)

[node name="NombreCarta" type="Node2D" parent="InfoCarta"]

[node name="NombreCartaTexto" type="Label" parent="InfoCarta/NombreCarta"]
offset_left = -360.0
offset_top = -354.0
offset_right = 319.0
offset_bottom = -213.0
theme_override_fonts/font = SubResource("FontFile_87h7q")
theme_override_font_sizes/font_size = 400
text = "nombre"
label_settings = SubResource("LabelSettings_s7puy")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
